Updates frontend and backend to read and process file in parts.